--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1>Bienvenido a <%= title %></h1>
-    <p>El portal donde podrá crear sus propios juegos!</p>
-	<p><a href="/quizes/question">Comience a jugar</a></p>
-  </body>
-</html>
+    <br><h3>Bienvenido a <%= title %></h3>
+    <p>El portal donde podrá crear sus propios juegos!</p><br>
