--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,8 @@
     </section>
 
     <footer class="main" id="f1">
-      <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
+      <span><a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a></span>
+	  <span><a href="https://github.com/mariahelenarod/quiz">Mi Proyecto en GitHub</a></span>
     </footer>
   </div>
  </body>
