Pagina de creditos

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,4 @@ header, nav, section 	{ background: #eee; text-align: center;}
 footer               		{ background: #eee; text-align: center;}
 nav span             		{ margin: 0px 10px 0px 0px;}
 footer span             		{ margin: 0px 10px 0px 0px;}
+#img-aut                        { max-width: 100px;}
