--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,16 +16,17 @@
  <body>
   <div id="page-wrap">
     <header class="main" id="h1">
-      <h2>Quiz: el juego de las preguntas</h2>
+      <h2>Quiz<span>: el juego de las preguntas</span></h2>
     </header>
 
     <nav class="main" id="n1" role="navigation">
       <span><a href="/">Inicio</a></span>
       <span><a href="/quizes/question">Preguntas</a></span>
+	  <span><a href="/author">Créditos</a></span>
     </nav>
 
     <section class="main" id="s1">
-      <%- body %>
+      <div><%- body %></div>
     </section>
 
     <footer class="main" id="f1">
