Lista de Preguntas

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,4 +1,3 @@
 <h3>Créditos:</h3>
 <p>Autor: <%= nombre %></p>
-<img id ="img-aut" src="<%= foto %>" alt="Foto del autor"/>
-<p>Proyecto realizado para el curso de: <a href="https://www.miriadax.net/web/javascript-node-js">Desarrollo de servicios en la nube con HTML5, Javascript y node.js</a></p><br>
+<img id ="img-aut" src="<%= foto %>" alt="Foto del autor"/><br>
