--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,2 +1,2 @@
-    <br><p><%= respuesta %></p>
-    <a href="/quizes/question">Intentelo otra vez</a><br>
+    <p><%= respuesta %>
+    <a href="/quizes/<%= quiz.id %>">Volver</a></p><br>
