--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,5 +1,5 @@
-    <form method="get" action="/quizes/answer">
-      <br><p>Pregunta: <%= pregunta %></p>
+    <form method="get" action="/quizes/<%= quiz.id %>/answer">
+      <p>Pregunta: <%= quiz.pregunta %></p>
       <input type="text" name="respuesta" value="Respuesta" />	
       <input type="submit" value="Enviar"><br>
     </form>
