--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,2 +1,2 @@
-    <p><%= respuesta %>
-    <a href="/quizes/<%= quiz.id %>">Volver</a></p><br>
+    <p><%= respuesta %></p>
+    <a href="/quizes/<%= quiz.id %>">Volver</a><br>
