--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,7 @@
+<form method="get" action="/quizes">
+  <input type="text" name="search" value="Buscar pregunta" />	
+  <input type="submit" value="Enviar"><br><br>
+</form>
 <table id="tabla-preg">
   <% var i; for (i=0; i < quizes.length; i++) { %>        
      <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
