Buscador de Preguntas

--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,5 +1,5 @@
     <form method="get" action="/quizes/<%= quiz.id %>/answer">
       <p><span class="letra-negrita">Pregunta: </span><%= quiz.pregunta %></p>
-      <input type="text" name="respuesta" value="Respuesta" />	
+      <input type="text" name="respuesta" placeholder="Respuesta" />	
       <input type="submit" value="Enviar"><br>
     </form>
