--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -6,4 +6,5 @@
   <% var i; for (i=0; i < quizes.length; i++) { %>        
      <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
   <% } %>
-</table>
+</table><br>
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a> 
