--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,15 @@
     </nav>
 
     <section class="main" id="s1">
-      <div><%- body %></div>
+      <% if (errors.length) { %>
+         <span id='ErrorMsgs'>
+		    Corregir errores:<br/>
+            <% for (var i in errors) { %>
+              <span><%= errors[i].message %></span><br/>
+            <% } %>
+         </span>
+      <% } %>
+	  <div><%- body %></div>
     </section>
 
     <footer class="main" id="f1">
