--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -4,7 +4,10 @@
 </form>
 <table id="tabla-preg">
   <% var i; for (i=0; i < quizes.length; i++) { %>        
-     <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
+     <tr>
+	   <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+	   <td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
+	 </tr> 
   <% } %>
 </table><br>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a> 
