--- a/views/quizes/new.ejs
+++ b/views/quizes/new.ejs
@@ -1,4 +1,4 @@
-<p>Añadir pregunta:</p>
+<h3>Añadir pregunta:</h3><br>
 <form method="post" action="/quizes/create">
   <% include _form.ejs %>
 </form>
