--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,6 +1,6 @@
 <label for="preg" class="rem">Pregunta:</label>
-<input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/><p>
+<input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/><br>
 <label for="resp" class="rem">Respuesta:</label>
-<input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/><p>
+<input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/><br><br>
 <a href="/quizes"><button type="button">Cancelar</button></a>
 <input type="submit" value="Salvar">
