--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,6 +1,14 @@
 <label for="preg" class="rem">Pregunta:</label>
 <input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/><br>
 <label for="resp" class="rem">Respuesta:</label>
-<input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/><br><br>
+<input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/><br>
+<label for="tema" class="rem">Temática:</label>
+<select name="quiz[tema]" id="tema">
+  <option value="Otro" <%=quiz.tema==="Otro"?"selected":""%> >Otro</option>
+  <option value="Humanidades" <%=quiz.tema==="Humanidades"?"selected":""%> >Humanidades</option>
+  <option value="Ocio" <%=quiz.tema==="Ocio"?"selected":""%> >Ocio</option>
+  <option value="Ciencia" <%=quiz.tema==="Ciencia"?"selected":""%> >Ciencia</option>
+  <option value="Tecnologia" <%=quiz.tema==="Tecnologia"?"selected":""%> >Tecnologia</option>
+</select><br><br>
 <a href="/quizes"><button type="button">Cancelar</button></a>
 <input type="submit" value="Salvar">
