--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,3 +14,4 @@ footer span             		{ margin: 0px 10px 0px 0px;}
 #tabla-preg			{ margin: 0 auto; float: center;} /* top and bottom margins are 0. And right and left margins are auto */
 .letra-negrita            { font-weight: bold;}
 #ErrorMsgs                    { color: #f61; font-size: smaler; }
+.right 				{ float: right; }
