Autorizacion para crear, editar o borrar preguntas

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -7,15 +7,19 @@
      <tr>
 	   <td><%= quizes[i].tema %></td>
 	   <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-	   <td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
-	   <td>
-         <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-           <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-             Borrar
-           </button>
-         </form>
-       </td>
+	   <%if(session.user){%>
+	     <td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
+	     <td>
+           <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+             <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+               Borrar
+             </button>
+           </form>
+         </td>
+	   <%}%>
 	 </tr> 
   <% } %>
 </table><br>
-<a href="/quizes/new"><button type="button">Crear pregunta</button></a> 
+<%if(session.user){%>
+  <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<%}%> 
