--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -6,6 +6,16 @@
 	
     <p class="letra-negrita">Comentarios:</p>
     <%for(index in quiz.Comments){%>
-	  <p>- <%=quiz.Comments[index].texto%></p>
+	  <% if(quiz.Comments[index].publicado || session.user) {%>
+	    <p>- <%=quiz.Comments[index].texto%>
+		  <% if(session.user && !quiz.Comments[index].publicado) {%>
+            <a href="/quizes/<%=quiz.id%>/comments/<%=quiz.Comments[index].id%>/publish">
+              <button>Publicar</button>
+            </a>
+          <% } %>
+		</p>
+	  <% } %>
     <%}%>
+	
+	<p>* Los comentarios no se publicarán hasta ser autorizados</p>
 	<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Añadir comentario</button></a></p>
