--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,5 +13,6 @@ footer span             		{ margin: 0px 10px 0px 0px;}
 #img-aut                        { max-width: 100px;}
 #tabla-preg			{ margin: 0 auto; float: center;} /* top and bottom margins are 0. And right and left margins are auto */
 .letra-negrita            { font-weight: bold;}
-#ErrorMsgs                    { color: #f61; font-size: smaler; }
+#ErrorMsgs                    { color: #f61; font-size: smaller; } /* color rojo de texto*/
 .right 				{ float: right; }
+.avisoMsgs                    { font-size: smaller; } 
